--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <div class="header-box">
      
     <div class="logo-box">
-     <img class="logo" src="../src/img/logotechnews.jpg">
+     <img class="logo" src="src/img/logotechnews.jpg">
      <h1>TECHNEWS</h1>
     </div>
     
